# igeGameAnalytics

./: .gitignore  CMakeLists.txt  GAnalytics.cpp  GAnalytics.h  MANIFEST.in  README.md  conanfile.py  conanfile.txt  igeGameAnalytics.cpp  igeGameAnalytics.h  igeGameAnalytics_doc_en.h  project.conf  setup.py
android/: GameAnalyticsHelper.cpp  GameAnalyticsHelper.h  GameAnalyticsImpl.cpp
ios/: GameAnalyticsImpl.h  GameAnalyticsImpl.mm
macos/: GameAnalyticsImpl.cpp
scripts/: build-android.bat  build-headers.bat  build-ios.sh  build-macos.sh  build-pc.bat
